# smartmatch-resume-advisor

./: .dockerignore  .gitignore  01_Setup_and_Data.ipynb  02_Analysis_Pipeline.ipynb  03_Results_and_Interpretation.ipynb  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  READYTENSOR_ASSESSMENT_RESULTS.md  REPOSITORY_CLEANUP_PLAN.md  SmartMatch_AI_Analysis_Tutorial.ipynb  docker-compose.yml  kill-ports.sh  package-lock.json  package.json  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py  validate-elite-requirements.sh
backend/: .env.example  .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  exceptions.py  logging_config.py  main.py  models.py  monitoring.py
backend/app/chains/: __init__.py  analyzer.py  prompts.py  utils.py
backend/tests/: conftest.py  test_analysis.py  test_integration.py  test_performance.py
docs/: AI_PIPELINE_DIAGRAMS.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MARKETING_COPY.md  READYTENSOR_ARTICLE.md  READYTENSOR_ASSESSMENT_RESULTS.md  READYTENSOR_OPTIMIZATION.md  READYTENSOR_SHOWCASE.md  READYTENSOR_SUBMISSION.md  VISUAL_ASSETS_GUIDE.md
examples/: SAMPLE_ANALYSIS_OUTPUT.md  sample_job_description.txt  sample_resume.txt
frontend/: package-lock.json  package.json  vitest.config.js
frontend/app/: page.tsx
frontend/src/__tests__/: AnalysisForm.test.tsx
frontend/src/hooks/: useAnalyzeResume.ts
notebooks/: 03a_Results_Analysis.ipynb  03b_Interpretation_Insights.ipynb
scripts/: dev-start.sh  setup.sh  validate-env.sh
(+12 files in other folders)
