[project]
name = "smart-resume-analyzer"
requires-python = ">=3.11"
description = "AI-powered resume analysis application with FastAPI backend"
version = "1.0.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "analysis: marks tests as analysis functionality",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]